# nvim_lsp_cpp_dev

./: Dockerfile  README.md
custom/: chadrc.lua  init.lua  lspconfig.lua  plugins.lua
custom/configs/: lspconfig.lua  null-ls.lua
sample_cpp_project/: .clangd  CMakeLists.txt  hello.cpp
sample_cpp_project/src/: hello.cpp
